exemple3/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
    test: infr030
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30008
